--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^5.10.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.4"
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.4.4",
+    "react-spinners": "^0.13.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
